@@ -9,6 +9,8 @@
   * enable reading of a certain grayscale TIFF image.
   * support HEIC depth masks (reference
     https://github.com/ImageMagick/ImageMagick/discussions/3040).
+  * validate pixel cache offsets (reference
+    https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=29039).
 
 2020-12-24  7.0.10-53  <quetzlzacatenango@image...>
   * Release ImageMagick version 7.0.10-53 GIT revision 18083:3b141f557:20201224
